--- a/templates/image_display.j2.html
+++ b/templates/image_display.j2.html
@@ -21,8 +21,11 @@
     <br>
     <div id = "image">
       <img src = "DWbwk75X0AAUICA.jpg"/>
-      <span id = "name">Tunnel de Fourvière, Lyon</span><a class = "tags">#Photography</a><a class = "tags">#Urban</a><a class = "tags">#Lyon</a>
-      <div class = "description"></div>
+      <br>
+      <span id = "title">
+        <span id = "name">Tunnel de Fourvière, Lyon</span><a class = "tags">#Photography</a><a class = "tags">#Urban</a><a class = "tags">#Lyon</a>
+        <div class = "description"></div>
+      </span>
     </div>
   </div>
 </body>
