--- a/templates/gallery.j2.html
+++ b/templates/gallery.j2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <link rel="stylesheet" type="text/css" href="main.css">
+  <link rel="stylesheet" type="text/css" href="rsc/main.css">
   <meta charset="UTF-8">
   <title>Art.nemecl.eu</title>
 </head>
