added dedicated directory for images' pages

--- a/templates/gallery.j2.html
+++ b/templates/gallery.j2.html
@@ -59,7 +59,7 @@
     </div>
     <div class = "images">
       {% for image in images %}
-        <a href = "{{ image["image"] }}" style="--w: {{ image["thumb_width"] }}; --h: {{ image["thumb_width"] }}"><img src = "thumbnails/{{ image["thumb"] }}"/></a>{% endfor %}
+        <a href = 'i/{{ image["thumb_hash"] }}' style='--w: {{ image["thumb_width"] }}; --h: {{ image["thumb_width"] }}''><img src = 'thumbnails/{{ image["thumb"] }}'/></a>{% endfor %}
     </div>
   </div>
 </body>
